# GaiaRouter

./: .dockerignore  .gitignore  ALEMBIC_SETUP.md  CHANGELOG.md  CLAUDE.md  COMPLETE_DEVELOPMENT.md  CONTRIBUTING.md  DOCUMENTATION_RESTRUCTURE.md  Dockerfile  ENV_SETUP.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  README.zh-CN.md  SDD_COMPLIANCE_CHECK.md  alembic.ini  check_env.py  create_models_table.py  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test_models_api.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_key_prefix_suffix.py  004_create_models_table.py
archive/: README.md
archive/config/: config.yaml.example  pyproject.toml  setup.py
archive/docs/: IMPLEMENTATION_STATUS.md
archive/migrations/: migrate_key.py  migrate_model_prefix.py  migrate_mysql_key.py
designs/openrouter/: architecture.md  data-flow.md
docs/: README.md
docs/api/: api-documentation.md
docs/architecture/: README.md
docs/deployment/: deployment-guide.md  docker-deployment.md
docs/development/: IMPROVEMENTS.md  IMPROVEMENTS_COMPLETED.md  README.md
examples/: README.md  basic_usage.py  streaming_example.py
frontend/: .eslintrc.cjs  .prettierignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
scripts/: create_admin_user.py  init.py  sync_models.py
tests/: conftest.py  test_cost_calculation.py  test_placeholder.py
(+129 files in other folders)
